fixed squished charsheet, but menus aren't even

--- a/playerinfo.css
+++ b/playerinfo.css
@@ -5,7 +5,10 @@ td {
 }
 /* styles for the animals menu  */
 
-
+.menu-label{
+  float: left;
+  width: auto;
+}
 
 .vertical-menu {
   box-sizing: border-box;
@@ -15,8 +18,7 @@ td {
   border-collapse: collapse;
   border-spacing: 0;
   float: left;
-  width: 50%;
-  padding: 5px;
+  padding-left: 20px;
 }
 
 .vertical-menu div {
@@ -48,3 +50,47 @@ td {
   color: white;
 }
 /* end of animal menu */
+
+.elem-menu-label{
+  float: left;
+  width: auto;
+}
+
+.elem-vertical-menu {
+  box-sizing: border-box;
+  width: 40%;
+  height: 300px;
+  overflow-y: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  padding-left: 20px;
+}
+
+.elem-vertical-menu div {
+  margin-left:-5px;
+  margin-right:-5px;
+}
+
+.elem-vertical-menu::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+.elem-vertical-menu a {
+  background-color: #eee;
+  color: black;
+  display: flex;
+  padding: 12px;
+  
+}
+
+.elem-vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.elem-vertical-menu a.active {
+  background-color: #04AA6D;
+  color: white;
+}
